frontend/test/should_pass/dpo_001.grg
rule r {
	dpo pattern {
	}
	replace {
	}
}

