frontend/test/should_fail/independent_004.grg
rule r {
	independent {
		patternpath;
	}
	
	replace {
	}
}
